syntax = "proto3";

option go_package = "kvserver/proto";


message CacheMgr {
	map<string, bytes> cache = 1;
}